After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 760127 - mpegtsmux: Reserve bits not set to to 1's
mpegtsmux: Reserve bits not set to to 1's
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other All
: Normal normal
: 1.6.3
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-01-04 17:30 UTC by Bob Holcomb
Modified: 2016-01-11 23:30 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
sets the reserve bits to 1 to comply with standard. (1.27 KB, text/plain)
2016-01-04 17:30 UTC, Bob Holcomb
  Details
Git formatted patch (2.18 KB, patch)
2016-01-05 16:39 UTC, Bob Holcomb
none Details | Review
updated patch (1.90 KB, patch)
2016-01-05 19:41 UTC, Bob Holcomb
committed Details | Review

Description Bob Holcomb 2016-01-04 17:30:42 UTC
Created attachment 318222 [details]
sets the reserve bits to 1 to comply with standard.

The MPEG TS stream is not compliant due to reserve bits not being set to 1 in the PCR and OPCR in the adaptation field.
Comment 1 Bob Holcomb 2016-01-04 17:33:50 UTC
Oops, forgot to put what component this was for.  This is a patch for tsmux.c in the mpegtsmux library.
Comment 2 Reynaldo H. Verdejo Pinochet 2016-01-04 22:32:47 UTC
Hi. Thanks for your patch. Any chance you can send a
git formatted one though? Also, you might want to take
a look at http://gstreamer.freedesktop.org/wiki/SubmittingPatches/
for related instructions.
Comment 3 Bob Holcomb 2016-01-05 16:39:45 UTC
Created attachment 318266 [details] [review]
Git formatted patch

Sorry for the earlier patch.  Here is a correctly formatted one.  Thanks for pointing out the directions!

cheers, 

Bob
Comment 4 Reynaldo H. Verdejo Pinochet 2016-01-05 19:26:59 UTC
Review of attachment 318266 [details] [review]:

Thanks for the new patch. I don't have access to the standard
so can't really comment on its correctness but in the mean time,
please correct the following:

::: gst/mpegtsmux/tsmux/tsmux.c
@@ +936,3 @@
 fail:
+  if (packet)
+    g_free (packet);

Unrelated and unneeded, please remove the 'if', g_free is NULL safe.
Comment 5 Bob Holcomb 2016-01-05 19:41:14 UTC
Created attachment 318287 [details] [review]
updated patch

I don't remember why I thought that was needed.  Sorry for the confusion.  

Cheers, 

Bob
Comment 6 Tim-Philipp Müller 2016-01-09 16:44:11 UTC
Thanks for the patch! I ran gst-indent over it and pushed it:

commit cb520dce269b22eb105f19eac6f7abb4c13c86de
Author: Bob Holcomb <bholcomb@mak.com>
Date:   Tue Jan 5 14:35:11 2016 -0500

    mpegtsmux: fix reserve bits so they are 1's
    
    The MPEG standard (ISO-13880-1) says the reserve bits need to be set
    to one (2.1.64). This is causing transport streams to fail validation
    on some systems.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=760127


Did you also check the rest of the code whether we're correctly setting bits to 1 there, or did you just fix up what your validator complained about?
Comment 7 Tim-Philipp Müller 2016-01-11 23:30:30 UTC
Picked into 1.6 branch as well.